# mtpy-v2

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  HISTORY.rst  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.py
.benchmarks/: benchmark_mt_data_tree_interpolate.py
.github/: copilot-instructions.md
.github/workflows/: bump-version.yml  format.yml  publish.yml  pylint.yml  testing_in_conda.yml  testing_pip_import.yml
docs/: Makefile  environment.yml  index.rst  make.bat  requirements.txt
docs/source/: authors.rst  conf.py  contributing.rst  conventions.rst  history.rst  index.rst  installation.rst  modules.rst  mtpy.analysis.rst  mtpy.core.rst  mtpy.core.transfer_function.rst  mtpy.core.transfer_function.z_analysis.rst  mtpy.gis.rst  mtpy.imaging.mtplot_tools.rst  mtpy.imaging.rst  mtpy.modeling.modem.rst  mtpy.modeling.occam1d.rst  mtpy.modeling.occam2d.rst  mtpy.modeling.plots.rst  mtpy.modeling.rst  mtpy.modeling.simpeg.recipes.rst  mtpy.modeling.simpeg.rst  mtpy.modeling.ws3dinv.rst  mtpy.processing.aurora.rst  mtpy.processing.rst  mtpy.rst  mtpy.utils.rst  tf_accessor.md  usage.rst
mtpy/: __init__.py  mtpy_globals.py
mtpy/analysis/: residual_phase_tensor.py
mtpy/core/: __init__.py  mt.py  mt_collection.py  mt_data.py  mt_data_accessor.py  mt_data_tree.py  mt_data_tree_index.py  mt_dataframe.py  mt_location.py  mt_stations.py
mtpy/gis/: array2raster.py  raster_tools.py  shapefile_creator.py  shapefiles_creator.py
mtpy/gui/: modem_plot_response_gui.py  modem_plot_response_qt5.py  mt_editor_qt5.py  occam1d_gui_qt5.py  plot_stations.py
mtpy/imaging/: __init__.py  mtcolors.py  plot_mt_response.py  plot_mt_responses.py  plot_penetration_depth_1d.py  plot_penetration_depth_map.py  plot_phase_tensor_maps.py  plot_phase_tensor_pseudosection.py  plot_pseudosection.py  plot_pt.py  plot_residual_pt_maps.py  plot_residual_pt_ps.py  plot_resphase_maps.py  plot_spectrogram.py  plot_stations.py  plot_strike.py
mtpy/modeling/: errors.py  gocad.py  mare2dem.py  mesh_tools.py  occam1d.py  pek1d.py  pek1dclasses.py  pek2d.py  pek2dforward.py  structured_mesh_3d.py  winglink.py  winglinktools.py  ws3dinv.py
mtpy/processing/: __init__.py  base.py  birrp.py  filter.py  kernel_dataset.py  run_summary.py  tf.py
mtpy/utils/: __init__.py  array2raster.py  basemap_tools.py  calculator.py  concatenate_input.py  configfile.py  convert_modem_data_to_geogrid.py  edi_folders.py  estimate_tf_quality_factor.py  filehandling.py  gis_tools.py  matplotlib_utils.py  mtpy_decorator.py  shapefiles.py  (+2 more)
tests/: conftest.py  failing_tests_log.txt
(+168 files in other folders)
